--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -134,7 +134,7 @@ msgstr ""
 "\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item Une Unité \\silver\\ avec le coût de Recrutement le plus faible.\n"
-"  \\item Une Unité Neutre \\bronze{} de la Faction du Joueur.\n"
+"  \\item Une Unité Neutre \\bronze{} de sa Faction.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -184,8 +184,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item J × Tuiles de Départ (I)\n"
 "  \\item 2J × Tuiles Lointaines (II--III)\n"
-"  \\item J × Tuiles Proches (IV--V) avec Obélisque adjacente à la Tuile Centre\n"
-"  \\item J × Tuiles Proches (IV--V) sans Obélisque\n"
+"  \\item 2J × Tuiles Proches (IV--V) dont la moitié avec Obélisque adjacente à la Tuile Centre\n"
 "  \\item 1 × Tuile Centre (VI--VII). La Case centrale est «La Colline»\n"
 "\\end{itemize}\n"
 "\n"
