--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -198,7 +198,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Conditions de Victoire}}\n"
-"Quand un Joueur Revendique «La Colline», chaque Joueur, y compris celui sur «La Colline», a deux tours complets en plus. Après les deux manches supplémentaires, la partie s'arrête et le Joueur contrôlant «La Colline» gagne. Cependant, si «La Colline» n'a pas été revendiquée au début de la Manche 9, le premier Joueur a la Revendiquée, pendant ou après la Manche 9, gagne immédiatement.\n"
+"Quand un Joueur Revendique «La Colline», chaque Joueur, y compris celui sur «La Colline», a deux tours complets en plus. Puis, la partie s'arrête et le Joueur contrôlant «La Colline» gagne. Cependant, si «La Colline» n'a pas été revendiquée au début de la Manche 9, le premier Joueur a la Revendiquée, pendant ou après la Manche 9, gagne immédiatement.\n"
 "\n"
 
 #. type: multicols*
@@ -235,7 +235,7 @@ msgstr ""
 "\\end{itemize}\n"
 "\\textbf{Manche 2:}\n"
 "\\begin{itemize}\n"
-"  \\item Les Joueurs choisissent 10 \\svg{gold}, 4 \\svg{building_materials} ou 2 \\svg{valuables}.\n"
+"  \\item Au choix 10 \\svg{gold}, 4 \\svg{building_materials} ou 2 \\svg{valuables}.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 4:}\n"
 "\\begin{itemize}\n"
@@ -269,7 +269,7 @@ msgid ""
 msgstr ""
 "\\subsection*{\\MakeUppercase{Règles Additionnelles}}\n"
 "\\begin{itemize}\n"
-"  \\item Les Joueurs gagnent des revenus à chaque Manche.\n"
+"  \\item Les revenus se gagnent à chaque Manche.\n"
 "  \\item La Case Bloquée sur la Tuile Centre est une Source Enchantée et ne compte pas comme Bloquée.\n"
 "  \\item Chaque Case de la Tuile Centre est visitable une fois par Faction.\n"
 "  \\item Les Joueurs ne perdent pas \\svg{gold} en perdant ou en fuyant un Combat.\n"
