--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -326,7 +326,7 @@ msgstr ""
 "  \\darkcell[1.4]{-1/0}\n"
 "    & \\lightcell[1.4]{Pluie de Cendres – Chaque Unité \\svg{unit_flying-table} gagne -2 \\svg{initiative-table}.}\\\\\n"
 "  \\darkcell[1.4]{-1/+1}\n"
-"    & \\lightcell[1.4]{Terre Brulante – Chaque Unité \\silver\\ et \\golden\\ commence le Combat avec 1 \\svg{damage-table}.}\\\\\n"
+"    & \\lightcell[1.4]{Terre Brulante – Les Unités \\silver\\ et \\golden\\ commence le Combat avec 1 \\svg{damage-table}.}\\\\\n"
 "  \\darkcell[1.4]{0/-1}\n"
 "    & \\lightcell[1.4]{Coulée de Boue – Chaque Unité \\svg{unit_ground-table} se déplace d'une case en moins.}\\\\\n"
 "  \\darkcell[1.4]{0/0}\n"
