--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -273,7 +273,7 @@ msgstr ""
 "  \\item La Case Bloquée sur la Tuile Centre est une Source Enchantée et ne compte pas comme Bloquée.\n"
 "  \\item Chaque Case de la Tuile Centre est visitable une fois par Faction.\n"
 "  \\item Les Joueurs ne perdent pas \\svg{gold} en perdant ou en fuyant un Combat.\n"
-"  \\item Après une victoire contre un Héros Principal ou un Combat Niveau VII, vous pouvez Recruter ou Améliorer une Unité qui a été battue (points de vie réduits à 0) durant ce combat, sans coût.\n"
+"  \\item Après une victoire contre un Héros Principal ou contre un Combat Niveau VII, vous pouvez Recruter ou Améliorer une Unité qui a été battue (points de vie réduits à 0) durant ce combat, sans coût.\n"
 "  \\item \\textbf{Obélisque:} Vous pouvez placer votre Héros Principal vaincu sur un Obélisque que vous avez revendiqué. \\textit{Revendicable par tous les Joueurs.}\n"
 "  \\item \\textit{Optionnelle:} Au début de chaque Manche, lancez deux dés d'Attaque séparés et appliquez les effets de la table ci-dessous.\n"
 "\\end{itemize}\n"
