Fix layout in new latex build for trial

--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -23,11 +23,7 @@ This Scenario plays out over 8-10 Rounds.
   \item A chosen Neutral \bronze\ Unit matching the player's Faction
 \end{itemize}
 
-\textbf{Town Buildings:}
-\begin{itemize}
-  \item \bronze\ Dwelling
-  \item Mage Guild
-\end{itemize}
+\textbf{Town Buildings:} \bronze\ Dwelling, Mage Guild
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
