Use updated texlive (#289)

--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -23,11 +23,7 @@ This Scenario plays out over 8-10 Rounds.
   \item A chosen Neutral \bronze\ Unit matching the player's Faction
 \end{itemize}
 
-\textbf{Town Buildings:}
-\begin{itemize}
-  \item \bronze\ Dwelling
-  \item Mage Guild
-\end{itemize}
+\textbf{Town Buildings:} \bronze\ Dwelling, Mage Guild
 
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
@@ -77,7 +73,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \end{itemize}
 
 \vspace*{\fill}
-\hommtablemulticol[]{33}{
+\hommtablemulticol[]{32}{
   \centering
   \medskip
   \textbf{Battlefield Conditions}\\
@@ -92,8 +88,8 @@ When any player first flags ``The Hill'', each player, including the one who fla
     & \lightcell[1.4]{Scorching Earth – All \silver\ and \golden\ Units start Combat with 1 \svg{damage-table}.}\\
   \darkcell[1.4]{0/-1}
     & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
-  \darkcell[1.4]{0/0}
-    & \lightcell[1.4]{Clear Skies – No effect.}\\
+  \darkcell[1.0]{0/0}
+    & \lightcell[1.0]{Clear Skies – No effect.}\\
   \darkcell[1.4]{0/+1}
     & \lightcell[1.4]{Rocky Terrain – All \svg{unit_ground-table} Units gain \svg{defense_yellow} Token.}\\
   \darkcell[1.8]{+1/-1}
