--- a/structure.tex
+++ b/structure.tex
@@ -59,7 +59,6 @@
 
 \include{\sections/credits.tex}
 
-% \include{\sections/notes.tex}
+% % \include{\sections/notes.tex}
 
 \include{sections/back_cover.tex}
-
